kube/hello-nodejs-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-nodejs
  name: hello-nodejs
  namespace: default
spec:
  selector:
    app: hello-nodejs
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
